# ChangeLog for dev-libs/tntdb
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  07 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> tntdb-0.9.4.ebuild:
  Changed dependency from dev-db/libpq to virtual/postgresql-base

  17 Feb 2008; (Tommy[D]) tommy100@gmx.de tntdb-0.9.4.ebuild:
  Shorten description

  20 Jun 2007; Jakub Moc <jakub@gentoo.org> tntdb-0.9.1-r1.ebuild:
  Fix mysql dependency

  16 Jun 2007; Jakub Moc <jakub@gentoo.org> ChangeLog:
  Remove old ebuild with broken deps

  15 Jun 2007; Auke Booij (tulcod) <auke.booij@gmail.com>
  +tntdb-0.9.1-r1.ebuild:
  DEPEND and RDEPEND fixed, tntdb should actually not depend on tntnet

  11 Jun 2007; Auke Booij (tulcod) <auke.booij@gmail.com>
  +tntdb-0.9.1.ebuild, +metadata.xml:
  New Ebuild for bug 181641 thanks to DrEevil, shillelagh and me :)
