@@ -2,6 +2,10 @@
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  17 Nov 2008; Tiziano Müller <dev-zero@gentoo.org> -tntdb-0.9.4.ebuild,
+  +tntdb-1.0.1.ebuild:
+  Version bump.
+
   07 Jun 2008; Tiziano Müller <dev-zero@gentoo.org> tntdb-0.9.4.ebuild:
   Changed dependency from dev-db/libpq to virtual/postgresql-base
 
